--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -335,7 +335,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -796,7 +796,7 @@
     {
      "data": {
       "text/plain": [
-       "Counter({'low_risk': 51366, 'high_risk': 246})"
+       "Counter({'low_risk': 51352, 'high_risk': 260})"
       ]
      },
      "execution_count": 11,
@@ -806,23 +806,21 @@
    ],
    "source": [
     "# Resample the training data with the RandomOversample\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1)\n",
     "Counter(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'low_risk': 51366, 'high_risk': 51366})"
+       "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +828,7 @@
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
-    "ros = RandomOverSampler(random_state=1)\n",
+    "ros = RandomOverSampler(random_state=2)\n",
     "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "Counter(y_resampled)"
@@ -838,16 +836,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(random_state=1)"
+       "LogisticRegression(random_state=2)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,22 +854,22 @@
     "# Logistic regression using random oversampled data\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=2)\n",
     "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6438627638488825"
+       "0.6430647715048889"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,23 +877,23 @@
    "source": [
     "# Calculated the balanced accuracy score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
-    "\n",
+    "y_pred = model.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   70,    31],\n",
-       "       [ 6933, 10171]], dtype=int64)"
+       "array([[   54,    33],\n",
+       "       [ 5727, 11391]], dtype=int64)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,13 +902,13 @@
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "y_pred = model.predict(X_test)\n",
+    "\n",
     "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -919,10 +917,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.69      0.59      0.02      0.64      0.42       101\n",
-      "   low_risk       1.00      0.59      0.69      0.74      0.64      0.41     17104\n",
+      "  high_risk       0.01      0.62      0.67      0.02      0.64      0.41        87\n",
+      "   low_risk       1.00      0.67      0.62      0.80      0.64      0.41     17118\n",
       "\n",
-      "avg / total       0.99      0.60      0.69      0.74      0.64      0.41     17205\n",
+      "avg / total       0.99      0.67      0.62      0.79      0.64      0.41     17205\n",
       "\n"
      ]
     }
@@ -942,16 +940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'low_risk': 51366, 'high_risk': 51366})"
+       "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +957,7 @@
    "source": [
     "# Resample the training data with SMOTE\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "X_resampled, y_resampled = SMOTE(random_state=1, sampling_strategy='auto').fit_resample(\n",
+    "X_resampled, y_resampled = SMOTE(random_state=2, sampling_strategy='auto').fit_resample(\n",
     "    X_train, y_train\n",
     ")\n",
     "Counter(y_resampled)"
@@ -967,38 +965,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(random_state=1)"
+       "LogisticRegression(random_state=2)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=2)\n",
     "model.fit(X_resampled, y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6628910844779521"
+       "0.6420202972471003"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,17 +1009,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   64,    37],\n",
-       "       [ 5266, 11838]], dtype=int64)"
+       "array([[   53,    34],\n",
+       "       [ 5566, 11552]], dtype=int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1042,10 +1040,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
-      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "  high_risk       0.01      0.61      0.67      0.02      0.64      0.41        87\n",
+      "   low_risk       1.00      0.67      0.61      0.80      0.64      0.41     17118\n",
       "\n",
-      "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
+      "avg / total       0.99      0.67      0.61      0.80      0.64      0.41     17205\n",
       "\n"
      ]
     }
@@ -1074,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,16 +1095,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'high_risk': 246, 'low_risk': 246})"
+       "Counter({'high_risk': 260, 'low_risk': 260})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1125,7 @@
        "LogisticRegression(random_state=78)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,16 +1139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6628910844779521"
+       "0.6302712208564487"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,17 +1161,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   70,    31],\n",
-       "       [10324,  6780]], dtype=int64)"
+       "array([[  53,   34],\n",
+       "       [9425, 7693]], dtype=int64)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1196,10 +1194,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
-      "   low_risk       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
+      "  high_risk       0.01      0.61      0.45      0.01      0.52      0.28        87\n",
+      "   low_risk       1.00      0.45      0.61      0.62      0.52      0.27     17118\n",
       "\n",
-      "avg / total       0.99      0.40      0.69      0.56      0.52      0.27     17205\n",
+      "avg / total       0.99      0.45      0.61      0.62      0.52      0.27     17205\n",
       "\n"
      ]
     }
@@ -1229,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1236,7 @@
        "Counter({'high_risk': 68460, 'low_risk': 62011})"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1262,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,16 +1276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6447993752836463"
+       "0.6375533316412246"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,23 +1293,23 @@
    "source": [
     "# Calculated the balanced accuracy score\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
-    "\n",
+    "y_pred = model.predict(X_test)\n",
     "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  73,   28],\n",
-       "       [7409, 9695]], dtype=int64)"
+       "array([[  61,   26],\n",
+       "       [7293, 9825]], dtype=int64)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,13 +1318,13 @@
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "y_pred = model.predict(X_test)\n",
+    "\n",
     "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1335,10 +1333,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.72      0.57      0.02      0.64      0.42       101\n",
-      "   low_risk       1.00      0.57      0.72      0.72      0.64      0.40     17104\n",
+      "  high_risk       0.01      0.70      0.57      0.02      0.63      0.41        87\n",
+      "   low_risk       1.00      0.57      0.70      0.73      0.63      0.40     17118\n",
       "\n",
-      "avg / total       0.99      0.57      0.72      0.72      0.64      0.40     17205\n",
+      "avg / total       0.99      0.57      0.70      0.73      0.63      0.40     17205\n",
       "\n"
      ]
     }
