--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -1019,10 +1019,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn==1.0 in c:\\users\\vicae\\anaconda3\\envs\\pythondata\\lib\\site-packages (1.0)\n",
-      "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\vicae\\anaconda3\\envs\\pythondata\\lib\\site-packages (from scikit-learn==1.0) (1.21.5)\n",
       "Requirement already satisfied: joblib>=0.11 in c:\\users\\vicae\\anaconda3\\envs\\pythondata\\lib\\site-packages (from scikit-learn==1.0) (1.1.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\vicae\\anaconda3\\envs\\pythondata\\lib\\site-packages (from scikit-learn==1.0) (2.2.0)\n",
       "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\vicae\\anaconda3\\envs\\pythondata\\lib\\site-packages (from scikit-learn==1.0) (1.7.3)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\vicae\\anaconda3\\envs\\pythondata\\lib\\site-packages (from scikit-learn==1.0) (1.21.5)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\vicae\\anaconda3\\envs\\pythondata\\lib\\site-packages (from scikit-learn==1.0) (2.2.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -1060,7 +1060,7 @@
     {
      "data": {
       "text/plain": [
-       "EasyEnsembleClassifier(random_state=0)"
+       "EasyEnsembleClassifier(n_estimators=100, random_state=1)"
       ]
      },
      "execution_count": 20,
@@ -1071,7 +1071,7 @@
    "source": [
     "# Train the EasyEnsembleClassifier\n",
     "from imblearn.ensemble import EasyEnsembleClassifier\n",
-    "eec = EasyEnsembleClassifier(random_state=0)\n",
+    "eec = EasyEnsembleClassifier(random_state=1, n_estimators=100)\n",
     "eec.fit(X_train, y_train) \n"
    ]
   },
@@ -1083,7 +1083,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9210167961935611"
+       "0.925427358175101"
       ]
      },
      "execution_count": 21,
@@ -1106,7 +1106,7 @@
      "data": {
       "text/plain": [
        "array([[   79,     8],\n",
-       "       [ 1130, 15988]], dtype=int64)"
+       "       [  979, 16139]], dtype=int64)"
       ]
      },
      "execution_count": 22,
@@ -1133,10 +1133,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.07      0.91      0.93      0.12      0.92      0.85        87\n",
-      "   low_risk       1.00      0.93      0.91      0.97      0.92      0.85     17118\n",
+      "  high_risk       0.07      0.91      0.94      0.14      0.93      0.85        87\n",
+      "   low_risk       1.00      0.94      0.91      0.97      0.93      0.86     17118\n",
       "\n",
-      "avg / total       0.99      0.93      0.91      0.96      0.92      0.85     17205\n",
+      "avg / total       0.99      0.94      0.91      0.97      0.93      0.86     17205\n",
       "\n"
      ]
     }
